[gd_scene load_steps=7 format=2]

[ext_resource path="res://GDLAUNCHER_FILES/fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GDLAUNCHER_FILES/scrips/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.0901961, 0.207843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 1 )

[node name="GdLauncherMain" type="Node"]
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1040.0
margin_bottom = 613.0
color = Color( 0.160784, 0.176471, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upPanel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainTxt" type="Label" parent="upPanel"]
margin_right = 1026.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "GDLauncher"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pckSelect" type="Control" parent="."]
margin_left = 503.0
margin_top = 306.0
margin_right = 543.0
margin_bottom = 346.0

[node name="FileDialog" type="FileDialog" parent="pckSelect"]
margin_left = 10.0
margin_top = 74.0
margin_right = 1024.0
margin_bottom = 591.0
mouse_filter = 2
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.pck" )
current_dir = "/run/media/wolfyxon/SZYMON/Programy/Godot/Projects/GdLauncher"
current_path = "/run/media/wolfyxon/SZYMON/Programy/Godot/Projects/GdLauncher/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path" type="LineEdit" parent="pckSelect"]
margin_left = -164.0
margin_top = 48.0
margin_right = 154.0
margin_bottom = 72.0
placeholder_text = "C:/path/to/game.pck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_browse" type="Button" parent="pckSelect"]
margin_left = 163.0
margin_top = 50.0
margin_right = 222.0
margin_bottom = 70.0
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_launch" type="Button" parent="pckSelect"]
margin_left = -162.0
margin_top = 81.0
margin_right = 223.0
margin_bottom = 114.0
text = "LAUNCH"

[node name="Sprite" type="Sprite" parent="pckSelect"]
position = Vector2( 29, -62 )
scale = Vector2( 1.76563, 1.71875 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="pckSelect"]
margin_left = -147.0
margin_top = -5.0
margin_right = 216.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Load game from PCK file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_help" type="Button" parent="pckSelect"]
margin_left = 96.0
margin_top = -114.0
margin_right = 148.0
margin_bottom = -94.0
text = "? Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="pckSelect/btn_help"]
margin_left = -575.0
margin_top = -115.0
margin_right = 413.0
margin_bottom = 393.0
mouse_filter = 2
window_title = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="pckSelect/btn_help/AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 980.0
margin_bottom = 472.0
bbcode_enabled = true
bbcode_text = "Godot game ussually have PCK file in the same directory as executable.
That file stores all resources of the game. To select it press [Browse] in the GdLauncher main menu and find your PCK file.
[img]res://GDLAUNCHER_FILES/textures/screenshots/screenshot1.png[/img]"
text = "Godot game ussually have PCK file in the same directory as executable.
That file stores all resources of the game. To select it press [Browse] in the GdLauncher main menu and find your PCK file.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alert" type="AcceptDialog" parent="popup"]
margin_left = 149.0
margin_top = 91.0
margin_right = 868.0
margin_bottom = 506.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 50.0
margin_right = 334.0
margin_bottom = 599.0

[connection signal="file_selected" from="pckSelect/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="pckSelect/btn_browse" to="." method="_on_btn_browse_pressed"]
[connection signal="pressed" from="pckSelect/btn_launch" to="." method="_on_btn_launch_pressed"]
[connection signal="pressed" from="pckSelect/btn_help" to="." method="_on_btn_help_pressed"]
